# gemini-file-viewer-linux

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
gemini-file-viewer-js/: .web-url  GeminiFileViewer-Desktop.cmd  GeminiFileViewer.cmd  main.js  package-lock.json  package.json  preload.cjs
gemini-file-viewer-js/renderer/: index.html  renderer.js
gemini-file-viewer-py/: README.md  main.py
samples/: js_block_demo.js  python_demo.py  rust_block_demo.rs
scripts/: CAPTURE.md  build-musl.sh  build-release.sh  install-deps-ubuntu.sh
src/: app.rs  highlight.rs  io.rs  main.rs  search.rs  settings.rs  themes.rs  ui.rs
